fontsdir = $(pkgdatadir)/data/fonts

fonts_DATA =				\
	dejavusans.ttf			\
	dejavusans-bold.ttf		\
	dejavusansmono.ttf			\
	dejavusansmono-bold.ttf		\
	liberationsans.ttf		\
	liberationsans-bold.ttf	\
	liberationsansmono.ttf		\
	liberationsansmono-bold.ttf

EXTRA_DIST =				\
	$(fonts_DATA) \
	CMakeLists.txt
