fontsdir = $(pkgdatadir)/data/fonts

fonts_DATA =				\
	dejavusans.ttf			\
	dejavusans-bold.ttf		\
	dejavusansmono.ttf			\
	dejavusansmono-bold.ttf		\
	dejavuserifcondensed.ttf	\
	dejavuserifcondensed-bold.ttf	\
	liberationsans.ttf		\
	liberationsans-bold.ttf	\
	liberationsansmono.ttf		\
	liberationsansmono-bold.ttf	\
	mplus-1p-bold.ttf	\
	mplus-1p-regular.ttf \
	wqy-microhei.ttf

EXTRA_DIST =				\
	$(fonts_DATA) \
	CMakeLists.txt
