
graphicsdir = $(pkgdatadir)/data/graphics

graphics_DATA =				\
	target-cursor-in-range-l.png	\
	target-cursor-in-range-m.png	\
	target-cursor-in-range-s.png	\
	target-cursor-normal-l.png	\
	target-cursor-normal-m.png	\
	target-cursor-normal-s.png

EXTRA_DIST =			\
	$(graphics_DATA)	\
	CMakeLists.txt

SUBDIRS = gui images sprites
