SUBDIRS = tips

helpdir = $(pkgdatadir)/data/help

help_DATA =				\
	about.txt			\
	chatcommands.txt	\
	chatguild.txt	\
	chatparty.txt	\
	commands.txt		\
	download.txt		\
	footer.txt			\
	header.txt			\
	index.txt			\
	otherteam.txt		\
	searchmany.txt		\
	searchnotfound.txt	\
	skills.txt			\
	support.txt			\
	tags.idx			\
	team.txt			\
	windows.txt

EXTRA_DIST =			\
	$(help_DATA) \
	CMakeLists.txt
