testdir = $(pkgdatadir)/data/test

test_DATA =				\
	arrow_up.png \
	arrow_up_A.png \
	arrow_up_B.png \
	arrow_up_S.png \
	dye.png \
	equipmentwindow.xml \
	hide.png \
	items.xml \
	palette.gpl \
	paths.xml \
	quests.xml \
	serverlistplus.xml \
	simplefile.txt \
	test.txt \
	test.zip \
	testintmap.xml \
	units.xml

EXTRA_DIST =				\
	$(test_DATA) \
	CMakeLists.txt
