SUBDIRS = dir1 dir2

testdir = $(pkgdatadir)/data/test

test_DATA =				\
	arrow_up.png \
	arrow_up_A.png \
	arrow_up_B.png \
	arrow_up_S.png \
	dye.png \
	equipmentwindow.xml \
	hide.png \
	items.xml \
	palette.gpl \
	paths.xml \
	quests.xml \
	serverlistplus.xml \
	simplefile.txt \
	test.txt \
	test2.txt \
	test.zip \
	test2.zip \
	test3.zip \
	test4.zip \
	testintmap.xml \
	units.xml

EXTRA_DIST =				\
	$(test_DATA) \
	CMakeLists.txt
