fontssrcdir = $(pkgdatadir)/data/fonts/src

fontssrc_DATA = 

EXTRA_DIST =			\
	DejaVuSans-Bold.sfd \
	DejaVuSans.sfd \
	DejaVuSansMono-Bold.sfd \
	DejaVuSansMono.sfd \
	DejaVuSerifCondensed-Bold.sfd \
	DejaVuSerifCondensed.sfd \
	LiberationMono-Bold.sfd \
	LiberationMono-Regular.sfd \
	LiberationSans-Bold.sfd \
	LiberationSans-Regular.sfd \
	info.txt \
	CMakeLists.txt
