badgesdir = $(pkgdatadir)/data/graphics/badges

badges_DATA =				\
	away.png		\
	away.xml		\
	gm.png		\
	gm.xml		\
	inactive.png		\
	inactive.xml		\
	shop.png		\
	shop.xml		\
	team1.png		\
	team1.xml		\
	team2.png		\
	team2.xml		\
	team3.png		\
	team3.xml

EXTRA_DIST =				\
	$(badges_DATA)			\
	CMakeLists.txt
