flagsdir = $(pkgdatadir)/data/graphics/flags

flags_DATA =				\
	ca.png			\
	cn.png			\
	cz.png			\
	de.png			\
	en.png			\
	eo.png			\
	es.png			\
	fi.png			\
	fr.png			\
	hk.png			\
	id.png			\
	it.png			\
	jp.png			\
	nl_BE.png			\
	pl.png			\
	pt_BR.png			\
	pt.png			\
	ru.png			\
	se.png			\
	tr.png			\
	ua.png

EXTRA_DIST =				\
	$(flags_DATA)			\
	CMakeLists.txt
