SET (FILES
    bubble.png
    button.xml
    button_disabled.xml
    button_highlighted.xml
    button_pressed.xml
    buttonplay.png
    checkbox.png
    circle-off.xml
    circle-on.xml
    colors.xml
    dropdown.xml
    dropdown_background.xml
    dropdown_pressed.xml
    emote_selection.xml
    equipmentbox.png
    item_selection.xml
    item_shortcut_background.xml
    mouse.png
    playerbox_background.xml
    progress-indicator.png
    progressbar.xml
    radioin.png
    radioin_highlight.png
    radioout.png
    radioout_highlight.png
    resize.xml
    scroll.xml
    scroll_background.xml
    scroll_highlighted.xml
    scrollbuttons.xml
    scrollbuttons_pressed.xml
    slider.xml
    slider_highlighted.xml
    speechbubble.xml
    tab.xml
    tab_highlighted.xml
    tab_selected.xml
    tab_unused.xml
    target-cursor-in-range-l.png
    target-cursor-in-range-m.png
    target-cursor-in-range-s.png
    target-cursor-normal-l.png
    target-cursor-normal-m.png
    target-cursor-normal-s.png
    textfield_background.xml
    unknown-item.png
    window.png
    window.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/gui)
