SET (FILES
    bubble.png
    bubble.xml
    button.xml
    button_disabled.xml
    button_highlighted.xml
    button_pressed.xml
    buttonplay.png
    buy.xml
    charcreate_playerbox.xml
    checkbox.xml
    circle-off.xml
    circle-on.xml
    colors.xml
    complete_icon.xml
    dropdown.xml
    dropdown_background.xml
    dropdown_pressed.xml
    emote_selection.xml
    equipment_playerbox.xml
    equipmentbox.png
    incomplete_icon.xml
    inventory.xml
    item_selection.xml
    item_shortcut_background.xml
    mouse.png
    playerbox_background.xml
    progress-indicator.png
    progressbar.xml
    quests.xml
    radio.xml
    resize.xml
    scroll.xml
    scroll_background.xml
    scroll_hbackground.xml
    scroll_highlighted.xml
    scroll_vbackground.xml
    scrollbuttons.xml
    scrollbuttons_pressed.xml
    sell.xml
    server.xml
    shop.xml
    slider.xml
    slider_highlighted.xml
    speechbubble.xml
    tab.xml
    tab_highlighted.xml
    tab_selected.xml
    tab_unused.xml
    target-cursor-in-range-l.png
    target-cursor-in-range-m.png
    target-cursor-in-range-s.png
    target-cursor-normal-l.png
    target-cursor-normal-m.png
    target-cursor-normal-s.png
    textfield_background.xml
    unknown-item.png
    window.png
    window.xml
    world.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/graphics/gui)
