
guidir = $(pkgdatadir)/data/graphics/gui

gui_DATA =				\
	bubble.png			\
	button.xml			\
	button_disabled.xml		\
	button_highlighted.xml	\
	button_pressed.xml		\
	buttonplay.png			\
	checkbox.png			\
	circle-gray.png			\
	circle-green.png		\
	colors.xml			\
	dropdown.xml		\
	dropdown_background.xml		\
	dropdown_pressed.xml		\
	equipmentbox.png	\
	item_shortcut_bgr.png		\
	mouse.png			\
	playerbox_background.xml	\
	progress-indicator.png		\
	progressbar.xml			\
	radioin.png			\
	radioin_highlight.png		\
	radioout.png			\
	radioout_highlight.png		\
	resize.xml			\
	scroll.xml			\
	scroll_background.xml	\
	scroll_highlighted.xml	\
	scrollbuttons.xml			\
	scrollbuttons_pressed.xml\
	selection.png			\
	slider.xml			\
	slider_highlighted.xml		\
	speechbubble.xml		\
	tab.xml				\
	tab_highlighted.xml		\
	tab_selected.xml			\
	tab_unused.xml			\
	target-cursor-in-range-l.png	\
	target-cursor-in-range-m.png	\
	target-cursor-in-range-s.png	\
	target-cursor-normal-l.png		\
	target-cursor-normal-m.png		\
	target-cursor-normal-s.png		\
	textfield_background.xml		\
	unknown-item.png		\
	window.png			\
	window.xml

EXTRA_DIST =				\
	$(gui_DATA) \
	CMakeLists.txt
