spritesdir = $(pkgdatadir)/data/graphics/sprites

sprites_DATA =				\
	arrow_down.gif			\
	arrow_left.gif			\
	arrow_right.gif			\
	arrow_up.gif			\
	error.png			\
	error.xml			\
	manaplus_emotions.png\
	manaplus_emote.xml	\
	manaplus_emotes.xml

EXTRA_DIST =				\
	$(sprites_DATA)			\
	CMakeLists.txt			\
	manaplus_emotions.xcf
