spritesdir = $(pkgdatadir)/data/graphics/sprites

sprites_DATA =				\
	arrow_down.png			\
	arrow_left.png			\
	arrow_right.png			\
	arrow_up.png			\
	chatemotes.png			\
	error.png			\
	error.xml			\
	manaplus_emotions.png\
	manaplus_emote.xml	\
	manaplus_emotes.xml	\
	test.xml

EXTRA_DIST =				\
	$(sprites_DATA)			\
	CMakeLists.txt
