
helptipsdir = $(pkgdatadir)/data/help/tips

helptips_DATA =				\
	1.txt			\
	1-1.jpg			\
	1-2.jpg			\
	2.txt			\
	3.txt			\
	4.txt			\
	5.txt			\
	6.txt			\
	7.txt			\
	8.txt			\
	9.txt			\
	10.txt			\
	11.txt			\
	12.txt			\
	13.txt			\
	14.txt			\
	15.txt			\
	16.txt			\
	17.txt			\
	18.txt

EXTRA_DIST =			\
	$(helptips_DATA) \
	CMakeLists.txt
