SET (FILES
    attention.ogg
    chat1.ogg
    chat2.ogg
    complete.ogg
    email.ogg
    error.ogg
    finish.ogg
    incoming.ogg
    move.ogg
    notify.ogg
    newmessage.ogg
    offline.ogg
    online.ogg
    reminder.ogg
    send.ogg
    start.ogg
    watcher.ogg
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/sfx/system)
