systemdir = $(pkgdatadir)/data/sfx/system

system_DATA =				\
	attention.ogg \
	book.ogg \
	chat1.ogg \
	chat2.ogg \
	complete.ogg \
	email.ogg \
	error.ogg \
	finish.ogg \
	incoming.ogg \
	move.ogg \
	newmessage.ogg \
	notify.ogg \
	offline.ogg \
	online.ogg \
	page.ogg \
	reminder.ogg \
	send.ogg \
	start.ogg \
	watcher.ogg

EXTRA_DIST =				\
	$(system_DATA) \
	CMakeLists.txt
