SET (FILES
    buy.xml
    colors.xml
    cutin.xml
    equipment.xml
    info.xml
    inventory.xml
    mailedit.xml
    npc.xml
    ok.xml
    outfits.xml
    popup.xml
    progressbar.xml
    quests.xml
    sell.xml
    server.xml
    serverinfo.xml
    shop.xml
    window.png
    window.xml
    world.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/themes/enchilado)
