SET (FILES
    buy.xml
    colors.xml
    cutin.xml
    emotes.xml
    equipment.xml
    info.xml
    inventory.xml
    items.xml
    mailedit.xml
    npc.xml
    ok.xml
    outfits.xml
    popup.xml
    progressbar.xml
    quests.xml
    sell.xml
    server.xml
    serverinfo.xml
    shop.xml
    spells.xml
    window.png
    window.xml
    world.xml
    )

INSTALL(FILES ${FILES} DESTINATION ${DATA_DIR}/themes/enchilado)
