
guidir = $(pkgdatadir)/data/themes/enchilado

gui_DATA =				\
	buy.xml		\
	colors.xml		\
	cutin.xml		\
	equipment.xml		\
	info.xml		\
	inventory.xml		\
	mailedit.xml		\
	npc.xml		\
	ok.xml		\
	outfits.xml		\
	popup.xml		\
	progressbar.xml		\
	quests.xml		\
	sell.xml		\
	server.xml		\
	serverinfo.xml		\
	shop.xml		\
	window.png			\
	window.xml			\
	world.xml

EXTRA_DIST =				\
	$(gui_DATA) \
	CMakeLists.txt
